objects/TestObjectForDataFiltering__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Int__c</fullName>
        <label>Int</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Real__c</fullName>
        <label>Real</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>TestObjectForDataFiltering</label>
    <nameField>
        <label>TestObjectForDataFiltering Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestObjectForDataFiltering</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>